# ESP

./: README.md
alarm/: .cproject  .project  README.md  sdkconfig
alarm/documents/: DopplerRadar開発資料.xlsx
alarm/main/: main.c
alarm_controller/: .cproject  .project  README.md  sdkconfig
alarm_controller/main/: main.c  settings.h
gatt_msg_client/: .cproject  .project  README.md  sdkconfig
gatt_msg_client/main/: main.c
gatt_msg_server/: .cproject  .project  README.md  sdkconfig
gatt_msg_server/components/: README.md
gatt_msg_server/main/: CMakeLists.txt  main.c
nano_toolkit_framework/: .cproject  .project  README.md  sdkconfig
nano_toolkit_framework/components/ntfw_ble/: CMakeLists.txt  ntfw_ble_fmwk.c  ntfw_ble_msg.c
nano_toolkit_framework/components/ntfw_ble/include/: ntfw_ble_fmwk.h  ntfw_ble_msg.h
nano_toolkit_framework/components/ntfw_com/: CMakeLists.txt  ntfw_com_data_model.c  ntfw_com_date_time.c  ntfw_com_debug_util.c  ntfw_com_mem_alloc.c  ntfw_com_value_util.c
nano_toolkit_framework/components/ntfw_com/include/: ntfw_com_data_model.h  ntfw_com_date_time.h  ntfw_com_debug_util.h  ntfw_com_mem_alloc.h  ntfw_com_value_util.h
nano_toolkit_framework/components/ntfw_crypto/: CMakeLists.txt  ntfw_cryptography.c
nano_toolkit_framework/components/ntfw_crypto/include/: ntfw_cryptography.h
nano_toolkit_framework/components/ntfw_driver/: CMakeLists.txt  ntfw_drv_adxl345.c  ntfw_drv_lis3dh.c  ntfw_drv_mpu-6050.c  ntfw_drv_rx8900.c  ntfw_drv_st7032i.c
nano_toolkit_framework/components/ntfw_driver/include/: ntfw_drv_adxl345.h  ntfw_drv_lis3dh.h  ntfw_drv_mpu-6050.h  ntfw_drv_rx8900.h  ntfw_drv_st7032i.h
nano_toolkit_framework/components/ntfw_io/: CMakeLists.txt  ntfw_io_file_util.c  ntfw_io_gpio_util.c  ntfw_io_i2c_master.c  ntfw_io_touchpad_fmwk.c
nano_toolkit_framework/components/ntfw_io/include/: ntfw_io_file_util.h  ntfw_io_gpio_util.h  ntfw_io_i2c_master.h  ntfw_io_touchpad_fmwk.h
nano_toolkit_framework/documents/: ESP32_BluetoothLE.xlsx  ESP32_共通系API.xlsx  ESP32_開発環境.xlsx
nano_toolkit_framework/main/: CMakeLists.txt  main.c  settings.h
